fix $notice layout bug

--- a/src/style/widget.scss
+++ b/src/style/widget.scss
@@ -57,9 +57,9 @@
 /* 加载loading */
 .notice_loading {
   position: fixed;
-  left: 37.5%;
+  left: 40%;
   top: 47.5%;
-  width: 25%;
+  width: 20%;
   height: 5%;
   z-index: 8;
   display: flex;
